# MedNER.nl

./: README.md  pyproject.toml  real_inference_log.txt
scripts/: README.md  aligned_annotation_files.ps1  collect_annotations.ps1  drama.ps1  drama.sh  merge_by_canonical.py  process_annotations.ps1  pyenv_test.ps1  run_deberta_inference.ps1  run_deberta_training.ps1  run_eurobert_inference.ps1  run_eurobert_training.ps1  run_hf_ai4privacy_inference.sh  run_hf_ai4privacy_training.sh  run_inference_deberta.sh  run_inference_paper.sh  run_medroberta_training.sh  run_mono_for_multiclinai.sh  run_robber2023_training.sh  run_robbert2023l_training.ps1  run_training.sh  table_maker.py  test.py
src/cardioner/: evaluation.py  langextract.py  main.py  masker.py  parse_performance_json.py  predictor.py  run_inference_on_folds.py  utils.py
src/cardioner/multiclass/: loader.py  modeling.py  trainer.py
src/cardioner/multilabel/: loader.py  modeling.py  trainer.py
src/pubscience/: inspect_annotations_gradio.py  inspect_training.py
