[tool.poetry]
name = "cardioner-nl"
version = "0.1.0"
description = "NER model for Dutch cardiovascular discharges"
authors = [
    "Bram van Es, Lorenzo Pratesi, Alberto, Pablo, Wesam, Manuela, and Kasia Smietanka",
]
license = "GPL-3"
readme = "README.md"
packages = [{ include = "cardioner", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13.12,<3.14"
spacy = "^3.7.5"
scikit-learn = "^1.5.2"
scikit-lego = "^0.9.1"
seaborn = "^0.13.2"
simpletransformers = "^0.70.1"
datasets = "^3.1.0"
sentencepiece = "^0.2.1"
pydantic = "^2.9.2"
evaluate = "^0.4.3"
seqeval = "^1.2.2"
transformers = ">=4.57.0"
torch = {version = "2.6.0", source = "torch" }
accelerate = "^1.1.1"
pytorch-crf = "^0.7.2"
torchmetrics = "^1.6.1"
lightning = "^2.5.0.post0"
python-dotenv = "^1.0.1"
pytorch-metric-learning = "^2.8.1"
wandb = "^0.19.4"
regex = ">=2025.10.22"
langchain-text-splitters = "^0.3.8"
tiktoken = "^0.9.0"
sentence-transformers = "^5.0.0"
tabulate = "^0.9.0"
tokenlearn = "^0.2.1"
nltk = "^3.9.2"
levenshtein = "^0.27.3"
duckdb = "^1.4.2"
pysbd = "^0.3.4"
pyarrow = "^22.0.0"
ipykernel = "^7.1.0"
rapidfuzz = "^3.14.3"
langextract = "^1.2.0"
gradio = "^6.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"
